@@ -1,11 +1,11 @@
-/*
- * Copyright 2013 the original author or authors.
+/**
+ * Copyright © 2018 spring-data-dynamodb (https://github.com/derjust/spring-data-dynamodb)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- * http://www.apache.org/licenses/LICENSE-2.0
+ *     http://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -23,23 +23,26 @@ import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBMarshaller;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBMarshalling;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBRangeKey;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBTable;
+import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBTypeConverted;
+import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBTypeConverter;
 import com.amazonaws.services.dynamodbv2.datamodeling.DynamoDBVersionAttribute;
 import org.springframework.util.Assert;
 import org.springframework.util.ReflectionUtils;
-import org.springframework.util.ReflectionUtils.FieldCallback;
-import org.springframework.util.ReflectionUtils.MethodCallback;
 import org.springframework.util.StringUtils;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Optional;
 
 /**
  * @author Michael Lavelle
+ * @author Sebastian Just
  */
 public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtractingEntityMetadata<T> {
 
@@ -50,7 +53,7 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 	private List<String> globalIndexRangeKeyPropertyNames;
 
 	private String dynamoDBTableName;
-	private Map<String, String[]> globalSecondaryIndexNames = new HashMap<String, String[]>();
+	private Map<String, String[]> globalSecondaryIndexNames = new HashMap<>();
 
 	@Override
 	public String getDynamoDBTableName() {
@@ -58,7 +61,8 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 	}
 
 	/**
-	 * Creates a new {@link DynamoDBEntityMetadataSupport} for the given domain type.
+	 * Creates a new {@link DynamoDBEntityMetadataSupport} for the given domain
+	 * type.
 	 *
 	 * @param domainType
 	 *            must not be {@literal null}.
@@ -67,50 +71,47 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 
 		Assert.notNull(domainType, "Domain type must not be null!");
 		this.domainType = domainType;
+
 		DynamoDBTable table = this.domainType.getAnnotation(DynamoDBTable.class);
 		Assert.notNull(table, "Domain type must by annotated with DynamoDBTable!");
-		this.dynamoDBTableName = table.tableName();
-		this.globalSecondaryIndexNames = new HashMap<String, String[]>();
-		this.globalIndexHashKeyPropertyNames = new ArrayList<String>();
-		this.globalIndexRangeKeyPropertyNames = new ArrayList<String>();
-		ReflectionUtils.doWithMethods(domainType, new MethodCallback() {
-			@Override
-            public void doWith(Method method) {
-				if (method.getAnnotation(DynamoDBHashKey.class) != null) {
-					hashKeyPropertyName = getPropertyNameForAccessorMethod(method);
-				}
-				if (method.getAnnotation(DynamoDBRangeKey.class) != null) {
-					hasRangeKey = true;
-				}
-				DynamoDBIndexRangeKey dynamoDBRangeKeyAnnotation = method.getAnnotation(DynamoDBIndexRangeKey.class);
-				DynamoDBIndexHashKey dynamoDBHashKeyAnnotation = method.getAnnotation(DynamoDBIndexHashKey.class);
 
-				if (dynamoDBRangeKeyAnnotation != null) {
-					addGlobalSecondaryIndexNames(method, dynamoDBRangeKeyAnnotation);
-				}
-				if (dynamoDBHashKeyAnnotation != null) {
-					addGlobalSecondaryIndexNames(method, dynamoDBHashKeyAnnotation);
-				}
+		this.dynamoDBTableName = table.tableName();
+		this.hashKeyPropertyName = null;
+		this.globalSecondaryIndexNames = new HashMap<>();
+		this.globalIndexHashKeyPropertyNames = new ArrayList<>();
+		this.globalIndexRangeKeyPropertyNames = new ArrayList<>();
+		ReflectionUtils.doWithMethods(domainType, method -> {
+			if (method.getAnnotation(DynamoDBHashKey.class) != null) {
+				hashKeyPropertyName = getPropertyNameForAccessorMethod(method);
+			}
+			if (method.getAnnotation(DynamoDBRangeKey.class) != null) {
+				hasRangeKey = true;
+			}
+			DynamoDBIndexRangeKey dynamoDBRangeKeyAnnotation = method.getAnnotation(DynamoDBIndexRangeKey.class);
+			DynamoDBIndexHashKey dynamoDBHashKeyAnnotation = method.getAnnotation(DynamoDBIndexHashKey.class);
+
+			if (dynamoDBRangeKeyAnnotation != null) {
+				addGlobalSecondaryIndexNames(method, dynamoDBRangeKeyAnnotation);
+			}
+			if (dynamoDBHashKeyAnnotation != null) {
+				addGlobalSecondaryIndexNames(method, dynamoDBHashKeyAnnotation);
 			}
 		});
-		ReflectionUtils.doWithFields(domainType, new FieldCallback() {
-			@Override
-            public void doWith(Field field) {
-				if (field.getAnnotation(DynamoDBHashKey.class) != null) {
-					hashKeyPropertyName = getPropertyNameForField(field);
-				}
-				if (field.getAnnotation(DynamoDBRangeKey.class) != null) {
-					hasRangeKey = true;
-				}
-				DynamoDBIndexRangeKey dynamoDBRangeKeyAnnotation = field.getAnnotation(DynamoDBIndexRangeKey.class);
-				DynamoDBIndexHashKey dynamoDBHashKeyAnnotation = field.getAnnotation(DynamoDBIndexHashKey.class);
+		ReflectionUtils.doWithFields(domainType, field -> {
+			if (field.getAnnotation(DynamoDBHashKey.class) != null) {
+				hashKeyPropertyName = getPropertyNameForField(field);
+			}
+			if (field.getAnnotation(DynamoDBRangeKey.class) != null) {
+				hasRangeKey = true;
+			}
+			DynamoDBIndexRangeKey dynamoDBRangeKeyAnnotation = field.getAnnotation(DynamoDBIndexRangeKey.class);
+			DynamoDBIndexHashKey dynamoDBHashKeyAnnotation = field.getAnnotation(DynamoDBIndexHashKey.class);
 
-				if (dynamoDBRangeKeyAnnotation != null) {
-					addGlobalSecondaryIndexNames(field, dynamoDBRangeKeyAnnotation);
-				}
-				if (dynamoDBHashKeyAnnotation != null) {
-					addGlobalSecondaryIndexNames(field, dynamoDBHashKeyAnnotation);
-				}
+			if (dynamoDBRangeKeyAnnotation != null) {
+				addGlobalSecondaryIndexNames(field, dynamoDBRangeKeyAnnotation);
+			}
+			if (dynamoDBHashKeyAnnotation != null) {
+				addGlobalSecondaryIndexNames(field, dynamoDBHashKeyAnnotation);
 			}
 		});
 		Assert.notNull(hashKeyPropertyName, "Unable to find hash key field or getter method on " + domainType + "!");
@@ -130,8 +131,7 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 	/*
 	 * (non-Javadoc)
 	 *
-	 * @see
-	 * org.springframework.data.repository.core.EntityMetadata#getJavaType()
+	 * @see org.springframework.data.repository.core.EntityMetadata#getJavaType()
 	 */
 	@Override
 	public Class<T> getJavaType() {
@@ -139,7 +139,7 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 	}
 
 	@Override
-    public boolean isHashKeyProperty(String propertyName) {
+	public boolean isHashKeyProperty(String propertyName) {
 		return hashKeyPropertyName.equals(propertyName);
 	}
 
@@ -221,33 +221,33 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 	}
 
 	@Override
-	public String getOverriddenAttributeName(final String propertyName) {
+	public Optional<String> getOverriddenAttributeName(final String propertyName) {
 
 		Method method = findMethod(propertyName);
 		if (method != null) {
 			if (method.getAnnotation(DynamoDBAttribute.class) != null
 					&& !StringUtils.isEmpty(method.getAnnotation(DynamoDBAttribute.class).attributeName())) {
-				return method.getAnnotation(DynamoDBAttribute.class).attributeName();
+				return Optional.of(method.getAnnotation(DynamoDBAttribute.class).attributeName());
 			}
 			if (method.getAnnotation(DynamoDBHashKey.class) != null
 					&& !StringUtils.isEmpty(method.getAnnotation(DynamoDBHashKey.class).attributeName())) {
-				return method.getAnnotation(DynamoDBHashKey.class).attributeName();
+				return Optional.of(method.getAnnotation(DynamoDBHashKey.class).attributeName());
 			}
 			if (method.getAnnotation(DynamoDBRangeKey.class) != null
 					&& !StringUtils.isEmpty(method.getAnnotation(DynamoDBRangeKey.class).attributeName())) {
-				return method.getAnnotation(DynamoDBRangeKey.class).attributeName();
+				return Optional.of(method.getAnnotation(DynamoDBRangeKey.class).attributeName());
 			}
 			if (method.getAnnotation(DynamoDBIndexRangeKey.class) != null
 					&& !StringUtils.isEmpty(method.getAnnotation(DynamoDBIndexRangeKey.class).attributeName())) {
-				return method.getAnnotation(DynamoDBIndexRangeKey.class).attributeName();
+				return Optional.of(method.getAnnotation(DynamoDBIndexRangeKey.class).attributeName());
 			}
 			if (method.getAnnotation(DynamoDBIndexHashKey.class) != null
 					&& !StringUtils.isEmpty(method.getAnnotation(DynamoDBIndexHashKey.class).attributeName())) {
-				return method.getAnnotation(DynamoDBIndexHashKey.class).attributeName();
+				return Optional.of(method.getAnnotation(DynamoDBIndexHashKey.class).attributeName());
 			}
 			if (method.getAnnotation(DynamoDBVersionAttribute.class) != null
 					&& !StringUtils.isEmpty(method.getAnnotation(DynamoDBVersionAttribute.class).attributeName())) {
-				return method.getAnnotation(DynamoDBVersionAttribute.class).attributeName();
+				return Optional.of(method.getAnnotation(DynamoDBVersionAttribute.class).attributeName());
 			}
 		}
 
@@ -255,35 +255,37 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 		if (field != null) {
 			if (field.getAnnotation(DynamoDBAttribute.class) != null
 					&& !StringUtils.isEmpty(field.getAnnotation(DynamoDBAttribute.class).attributeName())) {
-				return field.getAnnotation(DynamoDBAttribute.class).attributeName();
+				return Optional.of(field.getAnnotation(DynamoDBAttribute.class).attributeName());
 			}
 			if (field.getAnnotation(DynamoDBHashKey.class) != null
 					&& !StringUtils.isEmpty(field.getAnnotation(DynamoDBHashKey.class).attributeName())) {
-				return field.getAnnotation(DynamoDBHashKey.class).attributeName();
+				return Optional.of(field.getAnnotation(DynamoDBHashKey.class).attributeName());
 			}
 			if (field.getAnnotation(DynamoDBRangeKey.class) != null
 					&& !StringUtils.isEmpty(field.getAnnotation(DynamoDBRangeKey.class).attributeName())) {
-				return field.getAnnotation(DynamoDBRangeKey.class).attributeName();
+				return Optional.of(field.getAnnotation(DynamoDBRangeKey.class).attributeName());
 			}
 			if (field.getAnnotation(DynamoDBIndexRangeKey.class) != null
 					&& !StringUtils.isEmpty(field.getAnnotation(DynamoDBIndexRangeKey.class).attributeName())) {
-				return field.getAnnotation(DynamoDBIndexRangeKey.class).attributeName();
+				return Optional.of(field.getAnnotation(DynamoDBIndexRangeKey.class).attributeName());
 			}
 			if (field.getAnnotation(DynamoDBIndexHashKey.class) != null
 					&& !StringUtils.isEmpty(field.getAnnotation(DynamoDBIndexHashKey.class).attributeName())) {
-				return field.getAnnotation(DynamoDBIndexHashKey.class).attributeName();
+				return Optional.of(field.getAnnotation(DynamoDBIndexHashKey.class).attributeName());
 			}
 			if (field.getAnnotation(DynamoDBVersionAttribute.class) != null
 					&& !StringUtils.isEmpty(field.getAnnotation(DynamoDBVersionAttribute.class).attributeName())) {
-				return field.getAnnotation(DynamoDBVersionAttribute.class).attributeName();
+				return Optional.of(field.getAnnotation(DynamoDBVersionAttribute.class).attributeName());
 			}
 		}
-		return null;
+		return Optional.empty();
 
 	}
 
 	@Override
-	public DynamoDBMarshaller<?> getMarshallerForProperty(final String propertyName) {
+	@SuppressWarnings("deprecation")
+	public <V extends DynamoDBMarshaller<?>> V getMarshallerForProperty(final String propertyName) {
+		// TODO #28
 		DynamoDBMarshalling annotation = null;
 
 		Method method = findMethod(propertyName);
@@ -291,21 +293,49 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 			annotation = method.getAnnotation(DynamoDBMarshalling.class);
 		}
 
-		if(annotation == null) {
+		if (annotation == null) {
 			Field field = findField(propertyName);
-			if(field != null) {
+			if (field != null) {
 				annotation = field.getAnnotation(DynamoDBMarshalling.class);
 			}
 		}
 
-		if(annotation != null) {
+		if (annotation != null) {
 			try {
-				return annotation.marshallerClass().newInstance();
-			} catch (InstantiationException e) {
+				@SuppressWarnings("unchecked")
+				Class<V> marshallerClazz = (Class<V>) annotation.marshallerClass();
+				return marshallerClazz.getDeclaredConstructor().newInstance();
+			} catch (InstantiationException | IllegalAccessException | NoSuchMethodException
+					| InvocationTargetException e) {
 				throw new RuntimeException(e);
-			} catch (IllegalAccessException e) {
-				throw new RuntimeException(e);
+			}
+		}
 
+		return null;
+	}
+
+	@Override
+	public DynamoDBTypeConverter<?, ?> getTypeConverterForProperty(final String propertyName) {
+		DynamoDBTypeConverted annotation = null;
+
+		Method method = findMethod(propertyName);
+		if (method != null) {
+			annotation = method.getAnnotation(DynamoDBTypeConverted.class);
+		}
+
+		if (annotation == null) {
+			Field field = findField(propertyName);
+			if (field != null) {
+				annotation = field.getAnnotation(DynamoDBTypeConverted.class);
+			}
+		}
+
+		if (annotation != null) {
+			try {
+				return annotation.converter().getDeclaredConstructor().newInstance();
+			} catch (InstantiationException | IllegalAccessException | IllegalArgumentException
+					| InvocationTargetException | NoSuchMethodException | SecurityException e) {
+				throw new RuntimeException(e);
 			}
 		}
 
@@ -342,8 +372,8 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 				&& dynamoDBIndexRangeKey.globalSecondaryIndexNames().length > 0) {
 			String propertyName = getPropertyNameForAccessorMethod(method);
 
-			globalSecondaryIndexNames.put(propertyName, method.getAnnotation(DynamoDBIndexRangeKey.class)
-					.globalSecondaryIndexNames());
+			globalSecondaryIndexNames.put(propertyName,
+					method.getAnnotation(DynamoDBIndexRangeKey.class).globalSecondaryIndexNames());
 			globalIndexRangeKeyPropertyNames.add(propertyName);
 
 		}
@@ -351,7 +381,7 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 				&& dynamoDBIndexRangeKey.globalSecondaryIndexName().trim().length() > 0) {
 			String propertyName = getPropertyNameForAccessorMethod(method);
 			globalSecondaryIndexNames.put(propertyName,
-					new String[] { method.getAnnotation(DynamoDBIndexRangeKey.class).globalSecondaryIndexName() });
+					new String[]{method.getAnnotation(DynamoDBIndexRangeKey.class).globalSecondaryIndexName()});
 			globalIndexRangeKeyPropertyNames.add(propertyName);
 
 		}
@@ -364,8 +394,8 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 				&& dynamoDBIndexRangeKey.globalSecondaryIndexNames().length > 0) {
 			String propertyName = getPropertyNameForField(field);
 
-			globalSecondaryIndexNames.put(propertyName, field.getAnnotation(DynamoDBIndexRangeKey.class)
-					.globalSecondaryIndexNames());
+			globalSecondaryIndexNames.put(propertyName,
+					field.getAnnotation(DynamoDBIndexRangeKey.class).globalSecondaryIndexNames());
 			globalIndexRangeKeyPropertyNames.add(propertyName);
 
 		}
@@ -373,7 +403,7 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 				&& dynamoDBIndexRangeKey.globalSecondaryIndexName().trim().length() > 0) {
 			String propertyName = getPropertyNameForField(field);
 			globalSecondaryIndexNames.put(propertyName,
-					new String[] { field.getAnnotation(DynamoDBIndexRangeKey.class).globalSecondaryIndexName() });
+					new String[]{field.getAnnotation(DynamoDBIndexRangeKey.class).globalSecondaryIndexName()});
 			globalIndexRangeKeyPropertyNames.add(propertyName);
 
 		}
@@ -386,8 +416,8 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 				&& dynamoDBIndexHashKey.globalSecondaryIndexNames().length > 0) {
 			String propertyName = getPropertyNameForAccessorMethod(method);
 
-			globalSecondaryIndexNames.put(propertyName, method.getAnnotation(DynamoDBIndexHashKey.class)
-					.globalSecondaryIndexNames());
+			globalSecondaryIndexNames.put(propertyName,
+					method.getAnnotation(DynamoDBIndexHashKey.class).globalSecondaryIndexNames());
 			globalIndexHashKeyPropertyNames.add(propertyName);
 
 		}
@@ -396,7 +426,7 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 			String propertyName = getPropertyNameForAccessorMethod(method);
 
 			globalSecondaryIndexNames.put(propertyName,
-					new String[] { method.getAnnotation(DynamoDBIndexHashKey.class).globalSecondaryIndexName() });
+					new String[]{method.getAnnotation(DynamoDBIndexHashKey.class).globalSecondaryIndexName()});
 			globalIndexHashKeyPropertyNames.add(propertyName);
 
 		}
@@ -408,8 +438,8 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 				&& dynamoDBIndexHashKey.globalSecondaryIndexNames().length > 0) {
 			String propertyName = getPropertyNameForField(field);
 
-			globalSecondaryIndexNames.put(propertyName, field.getAnnotation(DynamoDBIndexHashKey.class)
-					.globalSecondaryIndexNames());
+			globalSecondaryIndexNames.put(propertyName,
+					field.getAnnotation(DynamoDBIndexHashKey.class).globalSecondaryIndexNames());
 			globalIndexHashKeyPropertyNames.add(propertyName);
 
 		}
@@ -418,7 +448,7 @@ public class DynamoDBEntityMetadataSupport<T, ID> implements DynamoDBHashKeyExtr
 			String propertyName = getPropertyNameForField(field);
 
 			globalSecondaryIndexNames.put(propertyName,
-					new String[] { field.getAnnotation(DynamoDBIndexHashKey.class).globalSecondaryIndexName() });
+					new String[]{field.getAnnotation(DynamoDBIndexHashKey.class).globalSecondaryIndexName()});
 			globalIndexHashKeyPropertyNames.add(propertyName);
 
 		}
